--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/kevjin/vandyhacks-slackbot#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "i": "^0.3.6",
+    "npm": "^6.4.1",
     "request": "^2.85.0",
     "s": "^0.1.1",
     "slackbots": "^1.1.0"
