--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "i": "^0.3.6",
+    "needle": "^2.2.4",
     "npm": "^6.4.1",
     "request": "^2.85.0",
     "s": "^0.1.1",
