--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/kevjin/vandyhacks-slackbot#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cron": "^1.5.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "i": "^0.3.6",
